<resources>
    <string name="app_name">PojavLauncher (Minecraft: Java Edition for Android)</string>
    <string name="app_short_name">PojavLauncher</string>
    <string name="app_motd">Launch Minecraft: Java Edition in your device!</string>
    <string name="login_online_username_hint">Email or username</string>
    <string name="login_online_password_hint">Password</string>
    <string name="login_online_check_keeplogin">Keep me logged in</string>
    <string name="login_online_login_label">Login</string>
    <string name="login_error_invalid_username">Invalid username. Username must be in range of 3-16 characters, should only contains A-Z, a-z, 0-9 and underscore.</string>
    <string name="login_error_exist_username">This username already exist</string>
    <string name="login_microsoft">Microsoft login</string>
    <string name="login_select_account">Select account</string>
    <string name="login_title_no_saved_account">No account found !</string>
    <string name="login_dialog_no_saved_account">You don\'t have any saved account.\nUse the option <b>\"Keep me logged in\"</b> to save an account upon first login.</string>
    <string name="hint_control_mapping">"Swipe from right to left to open menu ◀\nHold a button to customize: edit, resize or delete."</string>
    <string name="warning_remove_account">This account will be removed!</string>
    <string name="alerttitle_install_jre">Install Java Runtime %s (.tar.xz)</string>
    <string name="alerttitle_installmod">Select a mod installer</string>
    <string name="error_fatal">PojavLauncher has unexpectedly crashed</string>
    <string name="error_no_version">No version!</string>
    <string name="error_show_more">Show more</string>
    <string name="error_show_less">Show less</string>
    <string name="toast_permission_denied">The read/write to storage permission is required!</string>
    <string name="toast_optifine_success">Install successful</string>
    <string name="toast_uninstalljre_done">Done uninstall Java Runtime</string>
    <string name="mcl_tab_news">News</string>
    <string name="mcl_tab_console">Development console</string>
    <string name="mcl_tab_crash">Crash log</string>
    <string name="mcl_account_connected">Connected</string>
    <string name="mcl_account_local">Local</string>
    <string name="mcl_version_msg">Ready to play Minecraft %s</string>
    <string name="mcl_launch_cleancache">Cleaning cache files</string>
    <string name="mcl_launch_downloading">Downloading %s</string>
    <string name="mcl_launch_downloading_progress">"Downloading %s (%.2f MB / %.2f MB)"</string>
    <string name="mcl_launch_download_assets">Preparing to download resources</string>
    <string name="mcl_launch_error_localmode">Minecraft can\'t be legally installed when logged in with a local account. Please switch to an online account to continue.</string>
    <string name="mcl_options">Options</string>
    <string name="mcl_option_modinstall">Launch a mod installer (Forge, LabyMod, Fabric, etc...)</string>
    <string name="mcl_option_modinstallwitharg">Launch a mod installer (with custom arguments)</string>
    <string name="mcl_option_customcontrol">Custom controls</string>
    <string name="mcl_option_settings">Settings</string>
    <string name="mcl_option_about">About</string>
    <string name="mcl_setting_title_use_surface_view">Use alternate surface rendering</string>
    <string name="mcl_setting_subtitle_use_surface_view">May help performance in gpu bound scenarios</string>
    <string name="mcl_setting_title_uninstalljre">Uninstall Java Runtime</string>
    <string name="mcl_setting_subtitle_uninstalljre">[Launcher restart required] This let you re-install Java Runtime</string>
    <string name="mcl_setting_title_freeform">Launch Minecraft in Freeform mode</string>
    <string name="mcl_setting_subtitle_freeform">Launch Minecraft in floating window. Requires Android 7.0+</string>
    <string name="mcl_setting_title_hide_sidebar">Hide Sidebar</string>
    <string name="mcl_setting_subtitle_hide_sidebar">Nostalgic folks preferring the old v1 UI might like this. Gives you a more fullscreen experience.</string>
    <string name="mcl_setting_title_ignore_notch">Ignore notch</string>
    <string name="mcl_setting_subtitle_ignore_notch">Ignore the notch and extends the screen under it.\nGives you a more immersive experience.</string>
    <string name="mcl_setting_title_resolution_scaler">Resolution Scaler</string>
    <string name="mcl_setting_subtitle_resolution_scaler">Allows you to decrease the game resolution. 100% is full resolution</string>
    <string name="mcl_setting_title_longpresstrigger">How long will trigger after long press</string>
    <string name="mcl_setting_subtitle_longpresstrigger">Change trigger time for long press in destroy block and drop item.</string>
    <string name="mcl_setting_title_backtorightmouse">Treat back button as right mouse</string>
    <string name="mcl_setting_subtitle_backtorightmouse">Some devices treats external right mouse as back button. If you are using external mouse, you should enable this.</string>
    <string name="mcl_setting_title_flat_button_style">Flat button style</string>
    <string name="mcl_setting_subtitle_flat_button_style">Enable this to change control button style to flat.</string>
    <string name="mcl_setting_title_buttonscale">Control buttons scaling</string>
    <string name="mcl_setting_subtitle_buttonscale">Upscale them if buttons are too small.</string>
    <string name="mcl_setting_title_mousescale">Mouse scaling</string>
    <string name="mcl_setting_subtitle_mousescale">Change size of virtual mouse.</string>
    <string name="mcl_setting_title_javaargs">JVM Launch arguments</string>
    <string name="mcl_setting_subtitle_javaargs">Be careful, this may make game crash if modified without knowledge.</string>
    <string name="mcl_setting_category_general">General settings</string>
    <string name="mcl_setting_category_scaling">Scaling settings</string>
    <string name="mcl_setting_category_renderer">Renderer</string>
    <string name="mcl_setting_renderer_gles2_4">holy gl4es: supports 1.0–1.19+</string>
    <string name="mcl_setting_renderer_virgl">virglrenderer (OpenGL ES 3): exports OpenGL 4.3</string>
    <string name="mcl_setting_renderer_vgpu">vgpu (OpenGL ES 3): exports OpenGL 3.0</string>
    <string name="mcl_setting_renderer_vulkan_zink">zink (Vulkan): exports OpenGL 4.6</string>
    <string name="mcl_setting_category_veroption">Version type will be in version list</string>
    <string name="mcl_setting_veroption_release">Release</string>
    <string name="mcl_setting_veroption_snapshot">Snapshot</string>
    <string name="mcl_setting_veroption_oldalpha">Old-alpha</string>
    <string name="mcl_setting_veroption_oldbeta">Old-beta</string>
    <string name="mcl_version_clone">Clone</string>
    <string name="global_edit">Edit</string>
    <string name="global_error">Error</string>
    <string name="global_warinng">Warning</string>
    <string name="global_load">Load</string>
    <string name="global_name">Name</string>
    <string name="global_remove">Remove</string>
    <string name="global_clone">Clone</string>
    <string name="global_restart">Restart</string>
    <string name="global_save">Save</string>
    <string name="global_unpacking">Unpacking %s</string>
    <string name="global_error_field_empty">This field can\'t be empty</string>
    <string name="global_waiting">Wait</string>
    <string name="mcn_exit_title">Application/Game exited with code %d, check latestlog.txt for more details.</string>
    <string name="mcn_exit_call">Exit</string>
    <string name="mcn_exit_confirm">Are you sure want to force close?</string>
    <string name="mcn_check_fail_lwjgl">LWJGL3 was not installed!</string>
    <string name="mcn_check_fail_vulkan_support">Vulkan Zink renderer is not supported on this device!</string>
    <string name="control_toggle">GUI</string>
    <string name="control_keyboard">Keyboard</string>
    <string name="control_chat">Chat</string>
    <string name="control_debug">Debug</string>
    <string name="control_primary">Pri</string>
    <string name="control_secondary">Sec</string>
    <string name="control_shift">◇</string>
    <string name="control_inventory">Inv</string>
    <string name="control_up">▲</string>
    <string name="control_left">◀</string>
    <string name="control_right">▶</string>
    <string name="control_down">▼</string>
    <string name="control_jump">⬛</string>
    <string name="control_thirdperson">3rd</string>
    <string name="control_listplayers">Tab</string>
    <string name="control_mouse">Mouse</string>
    <string name="control_mouseoff">Mouse: off</string>
    <string name="control_mouseon">Mouse: on </string>
    <string name="control_forceclose">Force close</string>
    <string name="control_viewout">Log output</string>
    <string name="control_adebug">Input Debug</string>
    <string name="control_customkey">Send custom keycode</string>
    <string name="control_scaleup">Scale up</string>
    <string name="control_scaledown">Scale down</string>
    <string name="import_control_label">Import controls</string>
    <string name="import_control_invalid_file">Invalid or corrupted file</string>
    <string name="import_control_import_button">import controls</string>
    <string name="import_control_verifying_file">File is being verified, please wait and try again…</string>
    <string name="import_control_invalid_name">Invalid name or file already exists</string>
    <string name="import_control_done">Importation done</string>
    <string name="customctrl_edit">Editing %s</string>
    <string name="customctrl_remove">Remove %s?</string>
    <string name="customctrl_keyname">Keycode</string>
    <string name="customctrl_toggle">Toggleable</string>
    <string name="customctrl_size">Size</string>
    <string name="customctrl_size_width">Width</string>
    <string name="customctrl_size_height">Height</string>
    <string name="customctrl_mapping">Mapping</string>
    <string name="customctrl_orientation">Orientation</string>
    <string name="customctrl_background_color">Background color</string>
    <string name="customctrl_corner_radius">Corner radius</string>
    <string name="customctrl_stroke_width">Stroke width</string>
    <string name="customctrl_stroke_color">Stroke color</string>
    <string name="customctrl_dynamicpos">Manual Dynamic position</string>
    <string name="customctrl_dynamicpos_x">Dynamic X</string>
    <string name="customctrl_dynamicpos_y">Dynamic Y</string>
    <string name="customctrl_transparency_bg">Background transparency</string>
    <string name="customctrl_button_opacity">Button Opacity</string>
    <string name="customctrl_keycombine">Key combination</string>
    <string name="customctrl_keycombine_alt">Alt</string>
    <string name="customctrl_keycombine_control">Ctrl</string>
    <string name="customctrl_keycombine_shift">Shift</string>
    <string name="customctrl_addbutton">Add button</string>
    <string name="customctrl_addbutton_drawer">Add button drawer</string>
    <string name="customctrl_addsubbutton">Add sub-button</string>
    <string name="main_install_jar_file">Install .jar</string>
    <string name="main_play">Play</string>
    <string name="preference_video_title">Video and renderer</string>
    <string name="preference_video_description">Resolution, scaling type, and renderer</string>
    <string name="preference_control_title">Control customization</string>
    <string name="preference_control_description">Gestures types, triggers, and scaling</string>
    <string name="preference_java_title">Java Tweaks</string>
    <string name="preference_java_description">Java versions, JVM Arguments, and RAM amount</string>
    <string name="preference_misc_title">Miscellaneous settings</string>
    <string name="preference_misc_description">Version list, and libs checks</string>
</resources>