<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:key=""
    >

    <net.kdt.pojavlaunch.prefs.BackButtonPreference/>

    <PreferenceCategory
        android:title="Categories"
        >

        <Preference
            android:key="video_screen_setting"
            android:title="@string/preference_video_title"
            android:summary="@string/preference_video_description"
            android:fragment="net.kdt.pojavlaunch.prefs.screens.settings.LauncherPreferenceVideoFragment"
            />

        <Preference
            android:key="control_screen_setting"
            android:title="@string/preference_control_title"
            android:summary="@string/preference_control_description"
            android:fragment="net.kdt.pojavlaunch.prefs.screens.settings.LauncherPreferenceControlFragment"
            />

        <Preference
            android:key="java_screen_setting"
            android:title="@string/preference_java_title"
            android:summary="@string/preference_java_description"
            android:fragment="net.kdt.pojavlaunch.prefs.screens.settings.LauncherPreferenceJavaFragment"
            />

        <Preference
            android:key="misc_screen_setting"
            android:title="@string/preference_misc_title"
            android:summary="@string/preference_misc_description"
            android:fragment="net.kdt.pojavlaunch.prefs.screens.settings.LauncherPreferenceMiscellaneousFragment"
            />

        <!-- Not needed for now
        <Preference
            android:key="experimental_screen_setting"
            android:title="@string/preference_experimental_title"
            android:summary="@string/preference_experimental_description"
            android:fragment="net.kdt.pojavlaunch.prefs.screens.settings.LauncherPreferenceExperimentalFragment"
            /> -->
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Other">

        <SwitchPreference
            android:title="Force language to english"
            android:key="force_english"
            android:switchTextOff="The language is set to your device language"
            android:switchTextOn="The language is set to english"
            />
    </PreferenceCategory>





</PreferenceScreen>