<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/fragment_menu_main"
	android:gravity="top"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:background="@color/background_app"
	>

	<com.kdt.mcgui.LauncherMenuButton
		android:id="@+id/news_button"
		android:layout_width="match_parent"
		android:layout_height="@dimen/_66sdp"
		android:background="?android:attr/selectableItemBackground"

		android:text="@string/mcl_tab_news"
		android:drawableStart="@drawable/ic_menu_news"
		app:layout_constraintTop_toTopOf="parent"
		/>

	<com.kdt.mcgui.LauncherMenuButton
		android:id="@+id/custom_control_button"
		android:layout_width="match_parent"
		android:layout_height="@dimen/_66sdp"
		android:background="?android:attr/selectableItemBackground"
		android:drawableStart="@drawable/ic_menu_custom_controls"
		android:text="@string/mcl_option_customcontrol"
		app:layout_constraintTop_toBottomOf="@id/news_button"

		/>

	<com.kdt.mcgui.LauncherMenuButton
		android:id="@+id/install_jar_button"
		android:layout_width="match_parent"
		android:layout_height="@dimen/_66sdp"
		android:background="?android:attr/selectableItemBackground"
		android:drawableStart="@drawable/ic_menu_install_jar"
		android:text="@string/main_install_jar_file"

		app:layout_constraintTop_toBottomOf="@id/custom_control_button"
		/>

	<com.kdt.mcgui.LauncherMenuButton
		android:id="@+id/edit_profile_button"
		android:layout_width="match_parent"
		android:layout_height="@dimen/_66sdp"
		android:background="?android:attr/selectableItemBackground"
		android:drawableStart="@drawable/ic_edit_profile"
		android:text="EDIT SELECTED PROFILE"

		app:layout_constraintTop_toBottomOf="@id/install_jar_button"
		/>


	<com.kdt.mcgui.mcVersionSpinner
		android:id="@+id/mc_version_spinner"
		android:layout_width="match_parent"
		android:layout_height="@dimen/_52sdp"
		android:background="@color/background_bottom_bar"
		android:drawableEnd="@drawable/spinner_arrow"
		app:drawableEndPadding="@dimen/_50sdp"
		app:drawableEndSize="@dimen/_12sdp"
		app:drawableStartIntegerScaling="true"
		app:drawableStartSize="@dimen/_36sdp"

		app:layout_constraintBottom_toTopOf="@id/_background_display_view" />


	<!-- This view is for cosmetic purpose only -->
	<View
		android:id="@+id/_background_display_view"
		android:layout_width="match_parent"
		android:layout_height="@dimen/_79sdp"
		android:background="@color/background_bottom_bar"

		app:layout_constraintBottom_toBottomOf="parent"
		/>

	<com.kdt.mcgui.MineButton
		android:id="@+id/play_button"
		android:layout_width="match_parent"
		android:layout_height="@dimen/_62sdp"

		android:layout_marginHorizontal="@dimen/_17sdp"
		android:layout_marginBottom="@dimen/_15sdp"

		android:textAllCaps="true"
		android:text="@string/main_play"
		app:layout_constraintBottom_toBottomOf="parent"
		/>

</androidx.constraintlayout.widget.ConstraintLayout>

